tests/knowledge/testing-accounts-data/account-data-elasticache-default-network/test/us-east-1/ec2-describe-security-groups.json
{
    "SecurityGroups": [
        {
            "Description": "sdfgdasfs",
            "GroupId": "sg-00a7c043d99cff91d",
            "GroupName": "testubng - bla",
            "IpPermissions": [],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-0728bc9a4de4b1d03"
        },
        {
            "Description": "2021-04-12T06:14:52.789Z",
            "GroupId": "sg-00aa995205a07db73",
            "GroupName": "wdsgwd-7391",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-00e13b0f71a1086d3",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-00e13b0f71a1086d3",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-0c531af96a4bc4902"
        },
        {
            "Description": "2021-04-12T06:05:46.886Z",
            "GroupId": "sg-01e0339dfecd2cb96",
            "GroupName": "dfgdfa-3216",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-01f09211e9aeca050",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-01f09211e9aeca050",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-08fbd52449a21790a"
        },
        {
            "Description": "Managed by Terraform",
            "GroupId": "sg-027010182eb2df3c0",
            "GroupName": "terraform-20210425132014053500000001",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-08fbd52449a21790a"
        },
        {
            "Description": "Managed by Terraform",
            "GroupId": "sg-027af7511b7f3b7f3",
            "GroupName": "Cloudrail-dev-imanuel-Lambda-SG",
            "IpPermissions": [],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-Lambda-SG"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "ELB created security group used when no security group is specified during ELB creation - modifications could impact traffic to future ELBs",
            "GroupId": "sg-03ea6dbd2c5f84c7e",
            "GroupName": "default_elb_18295f8f-187f-336d-9938-11ed04392220",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "2021-04-12T06:50:54.484Z",
            "GroupId": "sg-05535afe52b5d8dea",
            "GroupName": "Cloudr-8631",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "launch-wizard-4 created 2021-04-21T11:17:47.868+03:00",
            "GroupId": "sg-05b6225825861aef1",
            "GroupName": "launch-wizard-4",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-0728bc9a4de4b1d03"
        },
        {
            "Description": "Security Group for cloudrail-dev-imanuel RDS Instance",
            "GroupId": "sg-066dcae2727b42cb5",
            "GroupName": "cloudrail-dev-imanuel-DB-SG",
            "IpPermissions": [
                {
                    "FromPort": 5432,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.16.0.0/16",
                            "Description": "access from jenkins (added manually)"
                        },
                        {
                            "CidrIp": "192.168.0.0/16",
                            "Description": "access from office VPN (added manually)"
                        },
                        {
                            "CidrIp": "10.20.0.0/20",
                            "Description": "Access from 10.20.0.0/20"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 5432,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Access from Step_Functions",
                            "GroupId": "sg-0fd0d8d546726a80d",
                            "UserId": "115553109071"
                        },
                        {
                            "Description": "Access from Lambdas",
                            "GroupId": "sg-027af7511b7f3b7f3",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Name",
                    "Value": "cloudrail-dev-imanuel-DBSG"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "AutoScaling-Security-Group-1 (2021-01-26T13:00:56.364Z)",
            "GroupId": "sg-07fa9e7a8d86198f6",
            "GroupName": "AutoScaling-Security-Group-1",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "launch-wizard-2 created 2020-11-05T17:50:30.273+02:00",
            "GroupId": "sg-08e6d4bd0c8974903",
            "GroupName": "launch-wizard-2",
            "IpPermissions": [
                {
                    "FromPort": 3389,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3389,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "AutoScaling-Security-Group-5 (2021-03-24T14:29:05.080Z)",
            "GroupId": "sg-095fd64073d50d8b3",
            "GroupName": "AutoScaling-Security-Group-5",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "launch-wizard-1 created 2021-02-17T14:13:13.583+02:00",
            "GroupId": "sg-0b6209fa0de777669",
            "GroupName": "launch-wizard-1",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "AutoScaling-Security-Group-6 (2021-04-12T09:32:49.439Z)",
            "GroupId": "sg-0c4e3c726c45b164a",
            "GroupName": "AutoScaling-Security-Group-6",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-0d2338bfa12417213",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0d2338bfa12417213",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-0728bc9a4de4b1d03"
        },
        {
            "Description": "AutoScaling-Security-Group-4 (2021-03-24T14:22:17.036Z)",
            "GroupId": "sg-0e1dd968f2627ac7b",
            "GroupName": "AutoScaling-Security-Group-4",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "launch-wizard-3 created 2021-02-01T08:21:31.616+02:00",
            "GroupId": "sg-0e26b22aceacae711",
            "GroupName": "launch-wizard-3",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "AutoScaling-Security-Group-2 (2021-03-24T13:08:00.268Z)",
            "GroupId": "sg-0e40c392369ac58cb",
            "GroupName": "AutoScaling-Security-Group-2",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-0ee85b077999bd139",
            "GroupName": "default",
            "IpPermissions": [],
            "IpPermissionsEgress": [],
            "OwnerId": "115553109071",
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "AutoScaling-Security-Group-3 (2021-03-24T14:17:50.960Z)",
            "GroupId": "sg-0f4c17f6d1e7c394c",
            "GroupName": "AutoScaling-Security-Group-3",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "SG for Step Functions",
            "GroupId": "sg-0fd0d8d546726a80d",
            "GroupName": "Cloudrail-dev-imanuel-Step-Functions-SG",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-Step-Functions-SG"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-37970008",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-37970008",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        }
    ]
}
